kfirs-app-helm/k8s/kfirs-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kfirs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kfirs-app
      component: kfirs-app
  template:
    metadata:
      labels:
        app: kfirs-app
        component: kfirs-app
    spec:
      containers:
        - name: kfirs-app
          image: kfire312/kfirs-app:v2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/auth
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /api/auth
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
