kfirs-app-helm/k8s/kfirs-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kfirs-app
spec:
  selector:
    app: kfirs-app
    component: kfirs-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
