kfirs-app-helm/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  clusterIP: None
  selector:
    app: kfirs-app
    component: db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
